Fixed error with calculation of standard deviation for alignment of long reads